feat: Add timeline for single tags